<resources>
    <string name="app_name">DataSafe</string>
    <string name="data_safe">Data Safe</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_agree_to_terms_of_services">I agree to Terms of Services.</string>
    <string name="signup">Sign up</string>
    <string name="signup_underline"><u>Sign up</u></string>
    <string name="min_length_3">Min length is 3.</string>
    <string name="min_length_4">Min length is 4.</string>
    <string name="first_char_must_be_alpha">First char must be alpha.</string>
    <string name="must_agree">You must agree to our TOS.</string>
    <string name="account_created">Account created.</string>
    <string name="no_space_allowed">No space in text allowed.</string>
    <string name="username_already_taken">Username already taken.</string>
    <string name="incorrect_username_or_password">Incorrect username or password.</string>
    <string name="add_button">Add button</string>
    <string name="category_added">Category added.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="category_updated">Category updated.</string>
    <string name="category_deleted">Category deleted.</string>
    <string name="yes">Yes</string>
    <string name="secret_added">Secret added.</string>
    <string name="secret_updated">Secret updated.</string>
    <string name="secret_deleted">Secret deleted.</string>
    <string name="click_to_view">Click to view/hide data.</string>
    <string name="hide">Hide</string>
    <string name="view">View</string>
    <string name="new_category">New Category</string>
    <string name="add">Add</string>
    <string name="new_secret">New Secret</string>
    <string name="title">Title</string>
    <string name="data">Data</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_secret">Edit Secret</string>
    <string name="go_back">Go Back</string>
    <string name="operation_not_performed">Operation not performed.</string>
    <string name="search_in">Search in</string>
    <string name="datasafe_dot">dataSAFE.</string>
    <string name="arrow_up">Arrow up</string>
    <string name="swipe_up_to_login">Swipe up to login.</string>
    <string name="view_hide_button">View Hide Button</string>
    <string name="click_to_view_data">Click to view data.</string>
    <string name="delete_button">Delete button</string>
    <string name="edit_button">Edit button</string>
    <string name="icon">Icon</string>
</resources>