<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@drawable/bg_1">

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginBottom="14dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_circle_filled"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/login"
        android:src="@drawable/ic_outline_lock_24" />

</LinearLayout>