<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.secretData.ViewSecretDataActivity">

    <TextView
        android:id="@+id/text_title_view_data"
        style="@style/Theme.DataSafe.TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text_data_view_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="7dp"
            android:fontFamily="@font/roboto_bold"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:text="@string/title" />

        <LinearLayout
            android:id="@+id/layout_view_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f1f1f1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_circle_filled"
                android:contentDescription="@string/click_to_view_data"
                android:src="@drawable/ic_eye" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_view" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>