<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    tools:context=".activities.LoginSignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/datasafe_dot"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/layout_login_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/layout_login_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/box_info_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="28dp"
                android:background="@drawable/bg_circle_filled"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/arrow_up"
                android:src="@drawable/ic_arrow_upward_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:gravity="center"
                android:text="@string/swipe_up_to_login"
                android:textColor="@color/white" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_view_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_create_account"
        style="@style/Theme.DataSafe.ButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@null"
        android:fontFamily="@font/roboto_condensed_bold"
        android:paddingHorizontal="8dp"
        android:text="@string/signup_underline"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>